# aa2unicode

./: README.md  pyproject.toml
input/: ip.txt  rfc7761-header.txt  rfc7761-register.txt
src/: main.py
src/aa2unicode/: main.py
src/awdl/: main.py
