[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awdl"
version = "0.1.0"
authors = [
  { name="Tom Pusateri", email="pusateri@bangj.com" },
]
description = "ArtWork Description Language Tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pusateri/awdl"
"Bug Tracker" = "https://github.com/pusateri/awdl/issues"
